# agentic-apps

./: .gitignore  README.md
.github/: CODEOWNERS
.github/workflows/: build-tss-images.yml  container-security-scan.yml  conventional_commits.yml  coverage.yaml  hub_push.yml
customer-support/: LICENSE  README.md
customer-support/agentic-healthcare-booking-app/: .env.template  .gitignore  README.md
email_reviewer/deploy/: email_reviewer.json  email_reviewer_example_env
email_reviewer/email_reviewer/: email_reviewer.py
mailcomposer/: main.py
mailcomposer/deploy/: mailcomposer.json  mailcomposer_example_env
mailcomposer/mailcomposer/: mailcomposer.py  state.py
marketing-campaign/: README.md  pyproject.toml
marketing-campaign/deploy/: marketing-campaign.json  marketing_campaign_example_env
network_of_assistants/: README.md  docker-compose.yaml
network_of_assistants/agp/: agp.py  example.py  pyproject.toml
network_of_assistants/moderator/: Dockerfile  agent.py  evaluator.py  main.py  pyproject.toml
network_of_assistants/noa-file-assistant/: main.py  pyproject.toml  util.py
network_of_assistants/noa-math-assistant/: agent.py  main.py  pyproject.toml
network_of_assistants/noa-moderator/: agent.py  main.py  pyproject.toml
network_of_assistants/noa-slim/: pyproject.toml  slim-config.yaml
network_of_assistants/noa-user-proxy/: pyproject.toml
network_of_assistants/noa-web-surfer/: Dockerfile  _multimodal_web_surfer.py  main.py  pyproject.toml
network_of_assistants/pdf_assistant/: Dockerfile  main.py  pyproject.toml
network_of_assistants/user_proxy/: main.py
observability_app/: Dockerfile  README.md  Taskfile.yaml  builder-config.yaml  collector-config.yaml  docker-compose.yaml  go.mod  go.sum  start-infrastructure.sh
observability_app/internal/: common.go
observability_app/monitor_app/: main.go
observability_app/monitored_app/: main.go
observability_app/special_agent/: .env.example  main.go
shadi-apps/: mas.toml  secops.toml
shadi-apps/agents/secops/: AGENTS.md  SKILL.md  a2a_server.py  import_secops_secrets.py  pyproject.toml  secops.py  skills.py  telemetry.py
shadi-apps/agents/secops/adk_agent/: agent.py  run_local.py
shadi-apps/agents/secops/evals/: evals.json
shadi-apps/agents/secops/tests/: test_skills.py
slim-multicluster/: .gitignore  README.md
slim-multicluster/k8s-troubleshooting-agent/: .env.template  README.md  pyproject.toml
tourist_scheduling_system/: .dockerignore  .env.example  README.md  dir-v0.5.6.tgz  docker-compose.yaml  publish_card.py  pyproject.toml  requirements.txt  run.sh  run_agents.sh  run_with_ui.sh  setup.py  setup.sh  setup_dev.py  slim-config-otel.yaml  slim-config.yaml  slim-control-plane-v0.7.0.tgz  slim-v0.7.0.tgz  start.sh  start_slim.sh  test_card_loader.py  update_ui_k8s.py
tourist_scheduling_system/a2a_cards/: autonomous_guide_agent.json  autonomous_tourist_agent.json  guide_agent.json  scheduler_agent.json  tourist_agent.json  ui_agent.json
tourist_scheduling_system/containers/: README.md
tourist_scheduling_system/containers/frontend/: Dockerfile  nginx.conf
tourist_scheduling_system/containers/guide/: Dockerfile  main.py
tourist_scheduling_system/containers/scheduler/: Dockerfile  main.py
tourist_scheduling_system/containers/tourist/: Dockerfile  main.py
tourist_scheduling_system/containers/ui/: Dockerfile  main.py
tourist_scheduling_system/deploy/k8s/: README.md  configmap.yaml  deploy.sh  frontend.yaml  guide-agent.yaml  namespace.yaml  scheduler-agent.yaml  spawn-agents.sh  tourist-agent.yaml  ui-agent.yaml
tourist_scheduling_system/deploy/k8s/templates/: guide-agent.yaml.tpl  tourist-agent.yaml.tpl
tourist_scheduling_system/docs/: README_PYTHON.md  README_UI_AGENT.md  SLIM.md  ai-agent-discovery-problem-statement.md  issues.md
tourist_scheduling_system/examples/: main.py  transport.py
tourist_scheduling_system/frontend/: .gitignore  README.md  pubspec.yaml  setup.sh
tourist_scheduling_system/frontend/lib/: main.dart
tourist_scheduling_system/frontend/test/: debug_genui.dart  widget_test.dart
tourist_scheduling_system/oasf_records/: autonomous_guide_record.json  autonomous_tourist_record.json  cid_index.json  guide_agent.json  guide_record.json  scheduler_agent.json  scheduler_record.json  tourist_agent.json  tourist_record.json  ui_agent.json  ui_record.json
tourist_scheduling_system/scripts/: controller-values.yaml  daemonset-values.yaml  demo_system_status.py  directory.sh  populate_dashboard.py  populate_dashboard_direct.py  run_adk_demo.py  run_autonomous_demo.py  run_demo.sh  run_with_ui.sh  send_guide_test.py  slim-control-csid.yaml.tpl  slim-controller.sh  slim-node-csid.yaml.tpl  slim-node.sh  spire.sh  statefulset-values.yaml
tourist_scheduling_system/src/: ui_agent_ports.json
tourist_scheduling_system/src/a2a_summit_demo/: __init__.py
tourist_scheduling_system/src/a2a_summit_demo/agents/: autonomous_guide_agent.py  autonomous_tourist_agent.py  guide_agent.py  scheduler_agent.py  tourist_agent.py  ui_agent.py
tourist_scheduling_system/src/a2a_summit_demo/core/: __init__.py
tourist_scheduling_system/src/agents/: __init__.py  a2a_cards.py  a2ui_schema.py  autonomous_guide_agent.py  autonomous_guide_server.py  autonomous_tourist_agent.py  autonomous_tourist_server.py  dashboard.py  guide_agent.py  scheduler_agent.py  tools.py  tourist_agent.py  ui_agent.py
tourist_scheduling_system/src/agents/templates/: dashboard.html
tourist_scheduling_system/src/core/: __init__.py  a2a_cards.py  dashboard.py  logging_config.py  memory.py  messages.py  model_factory.py  models.py  slim_transport.py  tracing.py
tourist_scheduling_system/tests/: conftest.py  test_a2a_cards.py  test_agent_memory_config.py  test_agents.py  test_autonomous_guide_agent.py  test_autonomous_tourist_agent.py  test_dashboard.py  test_guide_agent_ack.py  test_guide_cli.py  test_integration.py  test_memory.py  test_messages.py  test_scheduler_cli.py  test_scheduler_matching.py  test_tools.py  test_tourist_agent_proposal.py  test_tourist_cli.py  test_ui_agent.py
(+131 files in other folders)
