[build-system]
requires = ["hatchling>=1.24", "uv-dynamic-versioning>=0.6"]
build-backend = "hatchling.build"

[project]
name = "multi-agent-tourist-scheduling-system"
version = "1.0.0"
description = "Multi-Agent Tourist Scheduling System with Real-time UI"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "AGNTCY Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    # Include http-server extras so starlette + sse-starlette are available for A2A JSONRPCApplication usage
    "a2a-sdk[http-server]>=0.3.0",
    "click>=8.0.0",
    "httpx>=0.24.0",
    "uvicorn>=0.23.0",
    "fastapi>=0.100.0",
    "websockets>=11.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
a2a-scheduler = "agents.scheduler_agent:main"
a2a-guide = "agents.guide_agent:main"
a2a-tourist = "agents.tourist_agent:main"
a2a-ui = "agents.ui_agent:main"
a2a-autonomous-guide = "agents.autonomous_guide_agent:main"
a2a-autonomous-tourist = "agents.autonomous_tourist_agent:main"

[project.urls]
Homepage = "https://github.com/agntcy/agentic-apps"
Repository = "https://github.com/agntcy/agentic-apps"
Issues = "https://github.com/agntcy/agentic-apps/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/core"]

## Removed [tool.uv] dynamic-versioning section (triggered lint error). Re-add with correct schema if needed.

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.venv
  | \.git
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true