[build-system]
requires = ["hatchling>=1.24", "uv-dynamic-versioning>=0.6"]
build-backend = "hatchling.build"

[project]
name = "multi-agent-tourist-scheduling-system"
version = "1.0.0"
description = "Multi-Agent Tourist Scheduling System with Real-time UI"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "AGNTCY Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    # A2A SDK with HTTP server support
    "a2a-sdk[http-server]>=0.3.0",
    # CLI and HTTP
    "click>=8.0.0",
    "httpx>=0.24.0",
    # Web framework
    "uvicorn>=0.23.0",
    "fastapi>=0.100.0",
    "websockets>=11.0.0",
    # AI/LLM
    "openai>=1.0.0",
    "google-adk==1.20.0",
    "litellm>=1.80.5",
    # Configuration
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    # OpenTelemetry for distributed tracing
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "slimrpc==0.2.1",
    "slima2a==0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
# Agent entry points (ADK-based)
scheduler = "agents.scheduler_agent:main"
guide = "agents.guide_agent:main"
tourist = "agents.tourist_agent:main"
ui = "agents.ui_agent:main"

[project.urls]
Homepage = "https://github.com/agntcy/agentic-apps"
Repository = "https://github.com/agntcy/agentic-apps"
Issues = "https://github.com/agntcy/agentic-apps/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/core"]

## Removed [tool.uv] dynamic-versioning section (triggered lint error). Re-add with correct schema if needed.

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.venv
  | \.git
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
]
