[project]
name = "pdf-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "llama-index>=0.12.29",
    "llama-index-llms-azure-openai>=0.3.2",
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-llms-openai-like>=0.3.4",
    "agp",
    "poirot-sdk==0.1.14"
]

[tool.uv.sources]
agp = { workspace = true }
poirot-sdk = [
  { index = "cisco-internal" },
]

[[tool.uv.index]]
name = "cisco-internal"
url = "https://artifactory.devhub-cloud.cisco.com/artifactory/api/pypi/outshift-pypi/simple"
explicit = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
pdf-assistant = "main:run"
