[project]
name = "k8s-troubleshooting-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk[a2a]>=1.28.1,<2.0.0",
    "litellm>=1.83.7",
    "python-dotenv>=1.2.2",
    "slima2a>=0.3.0",
    "slim-bindings<1.3.0",
    "slim-mcp>=0.2.2",
    "urllib3>=2.7.0",
    "python-multipart>=0.0.27",
    "cryptography>=46.0.7",
    "idna>=3.15",
    "authlib>=1.6.12",
]
